deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-demo
  labels:
    app.kubernetes.io/name: app-demo
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: crc-tekton-gitops-lab
    app.kubernetes.io/version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-demo
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: crc-tekton-gitops-lab
        app.kubernetes.io/version: v2
    spec:
      serviceAccountName: app-demo
      containers:
        - name: app-demo
          image: image-registry.openshift-image-registry.svc:5000/tekton-demo-dev/app-demo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 300m
              memory: 256Mi
